--- a/calc-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/calc-webapp/src/main/webapp/WEB-INF/web.xml
@@ -97,7 +97,7 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>classpath*:**/applicationContext*.xml</param-value>
+			<param-value>classpath*:**/applicationContext-calcwebapp.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
