--- a/calc-control-panel/pom.xml
+++ b/calc-control-panel/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>2.1-a1-SNAPSHOT</version>
+		<version>2.1-a1</version>
 	</parent>
 
 	<description>Open Foris Calc - Control panel</description>
