fixed \t parsing from old calc versions; fixed number rounding of data table

--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -318,22 +318,37 @@
 <!-- 									</arguments> -->
 <!-- 								</configuration> -->
 <!-- 							</execution> -->
-
-<!-- 							<execution> -->
-<!-- 								<id>osx-installer</id> -->
-<!-- 								<phase>package</phase> -->
-<!-- 								<goals> -->
-<!-- 									<goal>exec</goal> -->
-<!-- 								</goals> -->
-<!-- 								<configuration> -->
-<!-- 									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								 -->
-<!-- 									<arguments> -->
-<!-- 										<argument>build</argument> -->
-<!-- 										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument> -->
-<!-- 										<argument>osx</argument> -->
-<!-- 									</arguments> -->
-<!-- 								</configuration> -->
-<!-- 							</execution> -->
+							<execution>
+								<id>linux-x64-installer</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
+										<argument>linux-x64</argument>
+									</arguments>
+								</configuration>
+							</execution>
+							
+							<execution>
+								<id>osx-installer</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${installbuilder-home}/bin/Builder.app/Contents/MacOS/installbuilder.sh</executable>								
+									<arguments>
+										<argument>build</argument>
+										<argument>${basedir}/${installer-dir}/${installbuilder-file-name}</argument>
+										<argument>osx</argument>
+									</arguments>
+								</configuration>
+							</execution>
 							
 <!-- 							<execution> -->
 <!-- 								<id>osx-installer-with-jdk</id> -->
