--- a/calc-webapp/pom.xml
+++ b/calc-webapp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>2.1-a4-SNAPSHOT</version>
+		<version>2.1-a4</version>
 		<relativePath>..</relativePath>
 	</parent>
 
