--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<postgres-driver.version>9.1-901-1.jdbc4</postgres-driver.version>
 		<sqlite-driver.version>3.7.2</sqlite-driver.version>
 		<jooq.version>3.6.2</jooq.version>
-		<collect.version>3.2.2-a3.1</collect.version>
+		<collect.version>3.11.8</collect.version>
 		<mondrian.version>3.5.0</mondrian.version>	
 		<of-commons-version>0.0.13</of-commons-version>
 		<geotools.version>2.7.5</geotools.version>
