added date variables to data vis section

--- a/calc-assembly/pom.xml
+++ b/calc-assembly/pom.xml
@@ -210,7 +210,7 @@
 			<artifactId>commons-pool</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
 		<dependency>
