--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
 	<properties>
 		<spring.version>4.2.2.RELEASE</spring.version>
 		<kettle.version>4.4.0-stable</kettle.version>
-		<postgres-driver.version>9.1-901-1.jdbc4</postgres-driver.version>
+		<!-- <postgres-driver.version>9.1-901-1.jdbc4</postgres-driver.version> -->
+		<postgres-driver.version>42.0.0</postgres-driver.version>
 		<sqlite-driver.version>3.7.2</sqlite-driver.version>
 		<jooq.version>3.6.2</jooq.version>
-		<collect.version>3.11.8</collect.version>
+		<!-- <collect.version>3.11.8</collect.version> -->
+		<collect.version>3.12.22</collect.version>
 		<mondrian.version>3.5.0</mondrian.version>	
 		<of-commons-version>0.1.25</of-commons-version>
 		<geotools.version>2.7.5</geotools.version>
@@ -325,6 +327,12 @@
 				<groupId>org.postgis</groupId>
 				<artifactId>postgis-jdbc</artifactId>
 				<version>1.3.3</version>
+				<exclusions>
+			      <exclusion>
+			         <groupId>org.postgis</groupId>
+			         <artifactId>postgis-stubs</artifactId>
+			      </exclusion>
+			   </exclusions>
 			</dependency>
 			<dependency>
 				<groupId>commons-dbcp</groupId>
@@ -337,8 +345,13 @@
 				<version>1.5.4</version>
 			</dependency>
 			<!-- DBMS drivers -->
-			<dependency>
+			<!-- <dependency>
 				<groupId>postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${postgres-driver.version}</version>
+			</dependency> -->
+			<dependency>
+				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>${postgres-driver.version}</version>
 			</dependency>
