--- a/calc-installer/pom.xml
+++ b/calc-installer/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.openforis.calc</groupId>
 		<artifactId>calc</artifactId>
-		<version>2.1-a16</version>
+		<version>2.1-a17-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>calc-installer</artifactId>
