--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,38 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openforis.calc</groupId>
 	<artifactId>calc</artifactId>
-	<version>2.1-a17-SNAPSHOT</version>
+	<version>2.1.a16-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
 	<name>Open Foris Calc</name>
-
+	<description>Open Foris Calc is a robust tool for data analysis and results calculation.</description>
+	<url>http://www.openforis.org/tools/calc.html</url>
+	<organization>
+		<name>Open Foris</name>
+		<url>www.openforis.org</url>
+	</organization>
+	
+	<developers>
+		<developer>
+			<name>Gino Miceli</name>
+			<email>gino.miceli@google.com</email>
+			<organization>Google</organization>
+			<organizationUrl>http://www.google.com</organizationUrl>
+		</developer>
+		<developer>
+			<name>Cosimo Togna</name>
+			<email>cosimo.togna@fao.org</email>
+			<organization>FAO of the UN</organization>
+			<organizationUrl>http://www.fao.org</organizationUrl>
+		</developer>
+		<developer>
+			<name>Stefano Ricci</name>
+			<email>stefano.ricci@fao.org</email>
+			<organization>FAO of the UN</organization>
+			<organizationUrl>http://www.fao.org</organizationUrl>
+		</developer>
+	</developers>
+	
 	<modules>
 		<module>calc-core</module>
 		<module>calc-server</module>
@@ -27,23 +55,21 @@
 		<!-- <collect.version>3.11.8</collect.version> -->
 		<collect.version>3.13.1</collect.version>
 		<mondrian.version>3.5.0</mondrian.version>	
-		<of-commons-version>0.1.25</of-commons-version>
+		<of-commons-version>0.1.27</of-commons-version>
 		<geotools.version>2.7.5</geotools.version>
 		<jackson.version>2.1.0</jackson.version>
 		<jre.version>1.8.0_65</jre.version>
 	</properties>
 	
 	<distributionManagement>
-		<repository>
-			<id>openforis-releases</id>
-			<name>Open Foris Repository</name>
-			<url>http://www.openforis.org/nexus/content/repositories/releases/</url>
-		</repository>
 		<snapshotRepository>
-			<id>openforis-snapshots</id>
-			<name>Open Foris Snapshots Repository</name>
-			<url>http://www.openforis.org/nexus/content/repositories/snapshots/</url>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
 	</distributionManagement>
 	
 	<scm>
@@ -53,48 +79,21 @@
 		<tag>calc-1.0-a13</tag>
 	</scm>
 
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+	
 	<repositories>
-		<repository>
-			<id>openforis-releases</id>
-			<name>Open Foris Releases</name>
-			<url>http://www.openforis.org/nexus/content/repositories/releases/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</repository>
-		<repository>
-			<id>openforis-snapshots</id>
-			<name>Open Foris Snapshots</name>
-			<url>http://www.openforis.org/nexus/content/repositories/snapshots/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
 		<repository>
 			<id>openforis-thirdparty</id>
 			<name>Open Foris 3rd Party dependencies</name>
 			<url>http://www.openforis.org/nexus/content/repositories/thirdparty/</url>
 		</repository>
 	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>openforis-plugin-releases</id>
-			<name>Open Foris Maven Plugin Releases</name>
-			<url>http://www.openforis.org/nexus/content/groups/public/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>openforis-plugin-snapshots</id>
-			<name>Open Foris Maven Plugin Snapshots</name>
-			<url>http://www.openforis.org/nexus/content/groups/public/</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-	
+
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -140,7 +139,6 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>deploy</phase>
 						<goals>
 							<goal>jar-no-fork</goal>
 						</goals>
@@ -153,13 +151,25 @@
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
-						<phase>deploy</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
 						<configuration>
       						<additionalparam>-Xdoclint:none</additionalparam>
     					</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -180,8 +190,22 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.5.3</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
 	    	</plugin>
+	    	<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.8</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
