--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<developers>
 		<developer>
 			<name>Gino Miceli</name>
-			<email>gino.miceli@google.com</email>
+			<email>gmiceli@google.com</email>
 			<organization>Google</organization>
 			<organizationUrl>http://www.google.com</organizationUrl>
 		</developer>
@@ -54,7 +54,7 @@
 		<jooq.version>3.6.2</jooq.version>
 		<collect.version>3.13.1</collect.version>
 		<mondrian.version>3.5.0</mondrian.version>	
-		<of-commons-version>0.1.25-SNAPSHOT</of-commons-version>
+		<of-commons-version>0.1.25</of-commons-version>
 		<geotools.version>2.7.5</geotools.version>
 		<jackson.version>2.1.0</jackson.version>
 		<jre.version>1.8.0_65</jre.version>
