--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.openforis.calc</groupId>
 	<artifactId>calc</artifactId>
-	<version>2.1-a19</version>
+	<version>2.1-a20-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<name>Open Foris Calc</name>
@@ -75,7 +75,7 @@
 		<url>https://github.com/openforis/calc</url>
 		<connection>scm:git:git@github.com:openforis/calc.git</connection>
 		<developerConnection>scm:git:git@github.com:openforis/calc.git</developerConnection>
-		<tag>calc-2.1-a19</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<licenses>
